--- a/study-css/practice02.css
+++ b/study-css/practice02.css
@@ -76,6 +76,7 @@ header {
 }
 
 .header-mark {
+    font-family: 'Times New Roman', Times, serif;
     position: absolute;
     color: azure;
     display: flex;
@@ -85,4 +86,5 @@ header {
     align-items: center;
     font-size: 30px;
     z-index: 1;
+    background-color: g;
 }
