--- a/ReactProject/react-project/src/App.css
+++ b/ReactProject/react-project/src/App.css
@@ -1,6 +1,14 @@
 .result-box {
   margin: 15px;
   width: 100%;
-  border: solid 1px black;
   padding: 15px;
+  
+}
+.table {
+  background-color: white;
+  margin-left: auto;
+  margin-right: auto;
+}
+body {
+  background-image: url('./assets/votes.png');
 }
